# KR4

./: README.md  main.py  pyproject.toml  vacancies.json
src/: api.py  functions.py  vacancy.py  vacancy_manager.py
