[tool.poetry]
name = "vacancy-parsing-skypro"
version = "0.1.0"
description = ""
authors = ["Kruck <reka_931@mail.ru>"]
readme = "README.md"
packages = [{include = "vacancy_parsing_skypro"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
